--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="http://locastyle.locaweb.com.br/assets/manual/application-c8cdf7595716faba02a3013327e05291.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://locastyle.locaweb.com.br/assets/application-9bdb4cb54af9dcaa6fddd6d6901c6ab1.js" type="text/javascript"></script>
     <script src="http://locastyle.locaweb.com.br/assets/manual/application-0fe1fe02aa0c5fd180666f2f4a5e9572.js" type="text/javascript"></script>
- 
+
 </head>
 <body>
 
@@ -17,12 +17,12 @@
         <h1 class="logo"><a href="http://locaweb.com.br/">Locaweb</a></h1>
         <p>Locaweb opensource projects</p>
     </div>
-  
+
     <div class="main boxes clearfix">
         <h2>Locaweb e Opensource</h2>
         <p> Nosso time é composto pelas pessoas mais talentosas e criativas do Brasil. Pessoas que constantemente estão corrigindo, discutindo e testando software para devolver a comunidade nossa experiência em sistemas de grande escala. Nós devolvemos para a comunidade, colegas e clientes o que fazemos aqui. Um dos nossos valores é que 'Fazemos mais com menos' - neste caso que nos orgulhamos do esforço e da criatividade que colocamos em todas as tarefas que temos, sem desperdício.</p>
         <p>Além de contribuir com código, suportamos projetos que usamos através de contribuições, com tempo pago dos nossos desenvolvedores e com nosso feedback. Com isto em mente, nosso time decidiu publicar o máximo que puder neste repositório do github. Estes são software que utilizamos, que fizemos com cuidado e gosto por sistemas de larga escala. Você vai encontrar aqui sistemas que vão de controladores de rede até ferramentas para capturar e agregar dados, controle de hypervisores, clients para várias aplicações em diferentes linguagens e experimentos interessantes.</p>
-        <p>Sinta-se a vontade para fae rum fork, enviar um pull request (não esqueça de adicionar seu nome como contribuidor). E se você gosta do tipo de projetos que fazemos e sente que pode leva-los ao próximo nível, nos avise (e envie um curriculum).</p>
+        <p>Sinta-se a vontade para fazer um fork, enviar um pull request (não esqueça de adicionar seu nome como contribuidor). E se você gosta do tipo de projetos que fazemos e sente que pode leva-los ao próximo nível, nos avise (e envie um curriculum).</p>
         <br><br>
         <h2>Locaweb and Opensource</h2>
         <p>Our team has the most talented and creative people around Brazil. People that constantly are patching, discussing, testing and giving back to the community what we use daily on our large scale systems. It is only natural that we contribute back to the community, colleagues and customers what we do here. One of our core values is "We do more with less" - meaning in this case that we strive to put our creative power on every task that we do.</p>
