--- a/test.html
+++ b/test.html
@@ -22,16 +22,16 @@
         <p>Feel free to fork, send pull requests (dont forget to add your name as contributor). And if you are interested in this kind of projects and feel that you could to take them to the next level, let us know (and send a resumé !)</p>
         <br><br>
     </div>
-    <table id="repositories"></table>
     <script>
         function repositories(response) {
+            $("#repositories").append("<thead><tr><th>Project</th><th>Description</th></tr></thead>");
             for(var index in response.data) {
               var datum = response.data[index];
               console.log(datum);
-              $("#repositories").append("<tr><td>"+datum.name+"</td>"+"<td>"+datum.description+"</td></tr>")
+              $("#repositories").append("<tr><td class='txtLeft'>"+datum.name+"</td>"+"<td class='txtLeft'>"+datum.description+"</td></tr>");
             }
         }
-        $.getJSON("https://api.github.com/orgs/locaweb/repos?callback=?", repositories)
+        $.getJSON("https://api.github.com/orgs/locaweb/repos?callback=?", repositories);
     </script>
 </body>
 </html>
