--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="http://locastyle.locaweb.com.br/assets/manual/application-0fe1fe02aa0c5fd180666f2f4a5e9572.js" type="text/javascript"></script>
 </head>
 <body>
+<div class="all">
+    <div class="headerPrincipalDoc">
+        <h1 class="logo"><a href="http://locaweb.com.br/">Locaweb</a></h1>
+        <p>Locaweb opensource projects</p>
+    </div>
     <div class="main boxes clearfix">
         <h2>Locaweb e Opensource</h2>
         <p> Nosso time é composto pelas pessoas mais talentosas e criativas do Brasil. Pessoas que constantemente estão corrigindo, discutindo e testando software para devolver a comunidade nossa experiência em sistemas de grande escala. Nós devolvemos para a comunidade, colegas e clientes o que fazemos aqui. Um dos nossos valores é que 'Fazemos mais com menos' - neste caso que nos orgulhamos do esforço e da criatividade que colocamos em todas as tarefas que temos, sem desperdício.</p>
@@ -35,5 +40,6 @@
         }
         $.getJSON("https://api.github.com/orgs/locaweb/repos?callback=?", repositories);
     </script>
+</div>
 </body>
 </html>
