--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://locastyle.locaweb.com.br/assets/manual/application-0fe1fe02aa0c5fd180666f2f4a5e9572.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="all">
+<div class="all" style="width: 1000px">
     <div class="headerPrincipalDoc">
         <h1 class="logo"><a href="http://locaweb.com.br/">Locaweb</a></h1>
         <p>Locaweb opensource projects</p>
