--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="http://locastyle.locaweb.com.br/assets/manual/application-0fe1fe02aa0c5fd180666f2f4a5e9572.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="all" style="width: 950px">
-    <div class="headerPrincipalDoc">
+<div class="all" style="width: 930px">
+    <div class="headerPrincipalDoc" style="width: 910px">
         <h1 class="logo"><a href="http://locaweb.com.br/">Locaweb</a></h1>
         <p>Locaweb opensource projects</p>
     </div>
-    <div class="main boxes clearfix">
+    <div class="main boxes clearfix" style="width: 910px">
         <h2>Locaweb e Opensource</h2>
         <p> Nosso time é composto pelas pessoas mais talentosas e criativas do Brasil. Pessoas que constantemente estão corrigindo, discutindo e testando software para devolver a comunidade nossa experiência em sistemas de grande escala. Nós devolvemos para a comunidade, colegas e clientes o que fazemos aqui. Um dos nossos valores é que 'Fazemos mais com menos' - neste caso que nos orgulhamos do esforço e da criatividade que colocamos em todas as tarefas que temos, sem desperdício.</p>
         <p>Além de contribuir com código, suportamos projetos que usamos através de contribuições, com tempo pago dos nossos desenvolvedores e com nosso feedback. Com isto em mente, nosso time decidiu publicar o máximo que puder neste repositório do github. Estes são software que utilizamos, que fizemos com cuidado e gosto por sistemas de larga escala. Você vai encontrar aqui sistemas que vão de controladores de rede até ferramentas para capturar e agregar dados, controle de hypervisores, clients para várias aplicações em diferentes linguagens e experimentos interessantes.</p>
