Removing useless code.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html class="guideLoca" lang="pt-br">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <title>Locaweb github projects</title>
-    <link href="http://locastyle.locaweb.com.br/assets/application-abc27644e03092dae2c9f302eba53351.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="http://locastyle.locaweb.com.br/assets/application-abc27644e03092dae2c9f302eba53351.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="http://locastyle.locaweb.com.br/assets/manual/application-c8cdf7595716faba02a3013327e05291.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://locastyle.locaweb.com.br/assets/application-9bdb4cb54af9dcaa6fddd6d6901c6ab1.js" type="text/javascript"></script>
