--- a/index.html
+++ b/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="utf-8">
-    <title>Locaweb github projects</title>
-    <link href="http://locastyle.locaweb.com.br/assets/application-abc27644e03092dae2c9f302eba53351.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://locastyle.locaweb.com.br/assets/manual/application-c8cdf7595716faba02a3013327e05291.css" media="screen" rel="stylesheet" type="text/css" />
-    <script src="http://locastyle.locaweb.com.br/assets/application-9bdb4cb54af9dcaa6fddd6d6901c6ab1.js" type="text/javascript"></script>
-    <script src="http://locastyle.locaweb.com.br/assets/manual/application-0fe1fe02aa0c5fd180666f2f4a5e9572.js" type="text/javascript"></script>
-</head>
-<body>
-<div class="all" style="width: 930px">
-    <div class="headerPrincipalDoc" style="width: 910px">
-        <h1 class="logo"><a href="http://locaweb.com.br/">Locaweb</a></h1>
-        <p>Locaweb opensource projects</p>
-    </div>
-    <div class="main boxes clearfix" style="width: 910px">
-        <h2>Locaweb e Opensource</h2>
-        <p> Nosso time é composto pelas pessoas mais talentosas e criativas do Brasil. Pessoas que constantemente estão corrigindo, discutindo e testando software para devolver a comunidade nossa experiência em sistemas de grande escala. Nós devolvemos para a comunidade, colegas e clientes o que fazemos aqui. Um dos nossos valores é que 'Fazemos mais com menos' - neste caso que nos orgulhamos do esforço e da criatividade que colocamos em todas as tarefas que temos, sem desperdício.</p>
-        <p>Além de contribuir com código, suportamos projetos que usamos através de contribuições, com tempo pago dos nossos desenvolvedores e com nosso feedback. Com isto em mente, nosso time decidiu publicar o máximo que puder neste repositório do github. Estes são software que utilizamos, que fizemos com cuidado e gosto por sistemas de larga escala. Você vai encontrar aqui sistemas que vão de controladores de rede até ferramentas para capturar e agregar dados, controle de hypervisores, clients para várias aplicações em diferentes linguagens e experimentos interessantes.</p>
-        <p>Sinta-se a vontade para fazer um fork, enviar um pull request (não esqueça de adicionar seu nome como contribuidor). E se você gosta do tipo de projetos que fazemos e sente que pode leva-los ao próximo nível, nos avise (e envie um curriculum - curriculo@locaweb.com.br).</p>
-        <br><br>
-        <h2>Locaweb and Opensource</h2>
-        <p>Our team has the most talented and creative people around Brazil. People that constantly are patching, discussing, testing and giving back to the community what we use daily on our large scale systems. It is only natural that we contribute back to the community, colleagues and customers what we do here. One of our core values is "We do more with less" - meaning in this case that we strive to put our creative power on every task that we do.</p>
-        <p>Beyond contributing with code, we support projects that we use thru contributions, paid developer time and by using and giving feedback. With that in mind, our team decided to publish the most of what we can here, at github. This is really software that we use, and crafted with all care. What you are going to find here are distinct software ranging from network controllers to data aggregation tools, hypervisor controlling to client examples in many languages and interesting experiments.</p>
-        <p>Feel free to fork, send pull requests (dont forget to add your name as contributor). And if you are interested in this kind of projects and feel that you could to take them to the next level, let us know (and send a resumé ! - curriculo@locaweb.com.br)</p>
-        <br><br>
-        <div style="width: 900px">
-        <table id="repositories" class="tableList"></table>
-        </div>
-    </div>
-    <script>
-        function repositories(response) {
-            $("#repositories").append("<thead><tr><th>Project</th><th>Description</th></tr></thead>");
-            for(var index in response.data) {
-              var datum = response.data[index];
-              $("#repositories").append("<tr><td class='txtLeft'>"+datum.name+"</td>"+"<td class='txtLeft'>"+datum.description+"</td></tr>");
-            }
-        }
-        $.getJSON("https://api.github.com/orgs/locaweb/repos?callback=?", repositories);
-    </script>
-</div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Locaweb github projects</title>
+		<link href="http://locastyle.locaweb.com.br/assets/application-abc27644e03092dae2c9f302eba53351.css" media="screen" rel="stylesheet" type="text/css" />
+		<link href="http://locastyle.locaweb.com.br/assets/manual/application-c8cdf7595716faba02a3013327e05291.css" media="screen" rel="stylesheet" type="text/css" />
+		<script src="http://locastyle.locaweb.com.br/assets/application-9bdb4cb54af9dcaa6fddd6d6901c6ab1.js" type="text/javascript"></script>
+		<script src="http://locastyle.locaweb.com.br/assets/manual/application-0fe1fe02aa0c5fd180666f2f4a5e9572.js" type="text/javascript"></script>
+
+		<!-- Custom CSS and Javascript -->
+		<link href="css/styles.css" media="screen" rel="stylesheet" type="text/css" />
+		<script src="js/main.js" type="text/javascript"></script>
+	</head>
+	<body>
+		<div class="all">
+			<div class="headerPrincipalDoc">
+				<h1 class="logo"><a href="http://locaweb.com.br/">Locaweb</a></h1>
+				<p>Locaweb opensource projects</p>
+			</div>
+			<div class="main boxes clearfix">
+				<h2>Locaweb e Opensource</h2>
+				<p> Nosso time é composto pelas pessoas mais talentosas e criativas do Brasil. Pessoas que constantemente estão corrigindo, discutindo e testando software para devolver a comunidade nossa experiência em sistemas de grande escala. Nós devolvemos para a comunidade, colegas e clientes o que fazemos aqui. Um dos nossos valores é que 'Fazemos mais com menos' - neste caso que nos orgulhamos do esforço e da criatividade que colocamos em todas as tarefas que temos, sem desperdício.</p>
+				<p>Além de contribuir com código, suportamos projetos que usamos através de contribuições, com tempo pago dos nossos desenvolvedores e com nosso feedback. Com isto em mente, nosso time decidiu publicar o máximo que puder neste repositório do github. Estes são software que utilizamos, que fizemos com cuidado e gosto por sistemas de larga escala. Você vai encontrar aqui sistemas que vão de controladores de rede até ferramentas para capturar e agregar dados, controle de hypervisores, clients para várias aplicações em diferentes linguagens e experimentos interessantes.</p>
+				<p>Sinta-se a vontade para fazer um fork, enviar um pull request (não esqueça de adicionar seu nome como contribuidor). E se você gosta do tipo de projetos que fazemos e sente que pode leva-los ao próximo nível, nos avise (e envie um curriculum - curriculo@locaweb.com.br).</p>
+
+				<br><br>
+
+				<h2>Locaweb and Opensource</h2>
+				<p>Our team has the most talented and creative people around Brazil. People that constantly are patching, discussing, testing and giving back to the community what we use daily on our large scale systems. It is only natural that we contribute back to the community, colleagues and customers what we do here. One of our core values is "We do more with less" - meaning in this case that we strive to put our creative power on every task that we do.</p>
+				<p>Beyond contributing with code, we support projects that we use thru contributions, paid developer time and by using and giving feedback. With that in mind, our team decided to publish the most of what we can here, at github. This is really software that we use, and crafted with all care. What you are going to find here are distinct software ranging from network controllers to data aggregation tools, hypervisor controlling to client examples in many languages and interesting experiments.</p>
+				<p>Feel free to fork, send pull requests (dont forget to add your name as contributor). And if you are interested in this kind of projects and feel that you could to take them to the next level, let us know (and send a resumé ! - curriculo@locaweb.com.br)</p>
+
+				<br><br>
+
+				<table id="repositories" class="tableList"></table>
+			</div>
+
+			<script>Locaweb.populateRepositories();</script>
+		</div>
+	</body>
 </html>
