--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1, user-scalable=false">
 
-    <title>Locaweb - Open Source</title>
+    <title>Projetos Open Source - Locaweb</title>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -38,9 +38,9 @@
           <input type="checkbox">
           <span class="os-menu-sandwich">&#9776;</span>
           <ul>
-            <li> <a href="">projetos</a> </li>
-            <li> <a href="">contribuidores</a> </li>
-            <li> <a href="">blog</a> </li>
+            <li> <a href="#featured-projects">projetos</a> </li>
+            <li> <a href="#contributors">contribuidores</a> </li>
+            <li> <a href="http://developer.locaweb.com.br/blog/">blog</a> </li>
           </ul>
         </nav>
       </div>
@@ -57,29 +57,27 @@
     <div class="os-mini-banner">
       <div>
         <img src="assets/images/ico-projects.png">
-        <h2>Projetos</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <h2><a href="#featured-projects">Projetos</a></h2>
+        <p>Estes são projetos que mantemos e que usamos nos nossos próprios produtos. Conheça e contribua conosco.</p>
       </div>
       <div>
       <img src="assets/images/ico-code.png">
-        <h2>Projetos</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <h2><a href="#contributors">Contribuidores</a></h2>
+        <p>Conheça os desenvolvedores que contribuem para os projetos OpenSource. Você também pode fazer parte, basta começar!</p>
       </div>
     </div>
 
     <section id="featured-projects" class="os-container os-section os-featured-projects">
       <h2 class="os-title-2 os-title-border">Projetos em Destaque</h2>
       <ul id="repos"></ul>
-      <a href="" class="os-btn"> ver todos os projetos</a>
+      <a href="http://github.com/locaweb/" class="os-btn">ver todos os projetos</a>
     </section>
 
-    <section class="os-developers os-section">
+    <section id="contributors" class="os-developers os-section">
       <div class="os-container">
         <h2 class="os-title-2 os-title-border">Contribuidores em destaque</h2>
         <ul id="users"></ul>
-        <a href="" class="os-btn"> Ver todos os contribuintes</a>
+        <a href="https://github.com/orgs/locaweb/people" class="os-btn"> Ver todos os contribuidores</a>
       </div>
     </section>
 
@@ -96,21 +94,19 @@
           <img src="assets/images/logo-locaweb.png">
         </a>
         <p class="os-copyright">
-          Copyright © 1997-2014 Locaweb Serviços de Internet S/A.<br>
-          Todo o conteúdo deste site é de uso exclusivo da Locaweb.
+          Copyright © 1997-2015 Locaweb Serviços de Internet S/A.<br>
         </p>
          <ul class="os-social-link">
-            <li> <a href="" class="os-social-facebook" target="_blank" >facebook</a> </li>
-            <li> <a href="" class="os-social-twitter">twitter</a> </li>
-            <li> <a href="" class="os-social-gplus">twitter</a> </li>
+            <li> <a href="http://facebook.com/locaweb/" class="os-social-facebook" target="_blank" >facebook</a> </li>
+            <li> <a href="http://twitter.com/locaweb" class="os-social-twitter">twitter</a> </li>
           </ul>
       </div>
     </footer>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="assets/javascripts/repos.js"></script>
-    <script type="text/javascript" src="assets/javascripts/devs.js"></script>
-    <script type="text/javascript" src="assets/javascripts/jquery.timeago.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js" async></script>
+    <script type="text/javascript" src="assets/javascripts/repos.js" async></script>
+    <script type="text/javascript" src="assets/javascripts/devs.js" async></script>
+    <script type="text/javascript" src="assets/javascripts/jquery.timeago.js" async></script>
 
   </body>
 </html>
