removing async of javascripts

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js" async></script>
-    <script type="text/javascript" src="assets/javascripts/repos.js" async></script>
-    <script type="text/javascript" src="assets/javascripts/devs.js" async></script>
-    <script type="text/javascript" src="assets/javascripts/jquery.timeago.js" async></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="assets/javascripts/repos.js"></script>
+    <script type="text/javascript" src="assets/javascripts/devs.js"></script>
+    <script type="text/javascript" src="assets/javascripts/jquery.timeago.js"></script>
 
   </body>
 </html>
