changing the titles of projects and contributors

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
     </div>
 
     <section id="featured-projects" class="os-container os-section os-featured-projects">
-      <h2 class="os-title-2 os-title-border">Projetos em Destaque</h2>
+      <h2 class="os-title-2 os-title-border">Conheça os projetos</h2>
       <ul id="repos"></ul>
       <a href="http://github.com/locaweb/" class="os-btn">ver todos os projetos</a>
     </section>
 
     <section id="contributors" class="os-developers os-section">
       <div class="os-container">
-        <h2 class="os-title-2 os-title-border">Contribuidores em destaque</h2>
+        <h2 class="os-title-2 os-title-border">Conheça os Contribuidores</h2>
         <ul id="users"></ul>
         <a href="https://github.com/orgs/locaweb/people" class="os-btn"> Ver todos os contribuidores</a>
       </div>
