--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
     </div>
 
     <section id="featured-projects" class="os-container os-section os-featured-projects">
-      <h2 class="os-title-2 os-title-border">Projetos em Destaque</h2>
+      <h2 class="os-title-2 os-title-border">Conheça os projetos</h2>
       <ul id="repos"></ul>
       <a href="http://github.com/locaweb/" class="os-btn">ver todos os projetos</a>
     </section>
 
     <section id="contributors" class="os-developers os-section">
       <div class="os-container">
-        <h2 class="os-title-2 os-title-border">Contribuidores em destaque</h2>
+        <h2 class="os-title-2 os-title-border">Conheça os Contribuidores</h2>
         <ul id="users"></ul>
         <a href="https://github.com/orgs/locaweb/people" class="os-btn"> Ver todos os contribuidores</a>
       </div>
@@ -91,10 +91,10 @@
     <footer class="os-footer">
       <div class="os-container">
         <a href="http://locaweb.com.br/" class="os-logo-footer">
-          <img src="assets/images/logo-locaweb.png">
+          <img src="assets/images/small-logo-locaweb.png">
         </a>
         <p class="os-copyright">
-          Copyright © 1997-2015 Locaweb Serviços de Internet S/A.<br>
+          Copyright © 1997-2016 Locaweb Serviços de Internet S/A.<br>
         </p>
          <ul class="os-social-link">
             <li> <a href="http://facebook.com/locaweb/" class="os-social-facebook" target="_blank" >facebook</a> </li>
