Redirect to github.com/locaweb

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/style.css">
     <meta name="description" content="Conheça os projetos OpenSource que a Locaweb mantém, e que podem ajudar em seus projetos de larga escala.">
     <meta name="author" content="Desenvolvedores da Locaweb">
+    <meta http-equiv="refresh" content="1; URL=https://github.com/locaweb"/>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
